experimental/ir/testdata/options/values/message_set.proto.stderr.txt
warning: message set types are deprecated
  --> testdata/options/values/message_set.proto:23:12
   |
22 | message MessageSet {
   | ------------------
23 |     option message_set_wire_format = true;
   |            ^^^^^^^^^^^^^^^^^^^^^^^ declared as message set here
   |
   = help: message set types are not implemented correctly in most Protobuf
           implementations

error: field `test.Foo.message_set_field` may not be used in an option: it uses
       'message set wire format' legacy proto1 feature which is not supported
  --> testdata/options/values/message_set.proto:40:12
   |
40 | option (m1).(Foo.message_set_field).name = "abc";
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
  ::: testdata/options/values/message_set.proto:22:1
   |
22 | message MessageSet {
   | ------------------ `test.MessageSet` declared as message set here

error: field `test.Foo.message_set_field` may not be used in an option: it uses
       'message set wire format' legacy proto1 feature which is not supported
  --> testdata/options/values/message_set.proto:44:5
   |
44 |     [test.Foo.message_set_field] {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  ::: testdata/options/values/message_set.proto:22:1
   |
22 | message MessageSet {
   | ------------------ `test.MessageSet` declared as message set here

encountered 2 errors and 1 warning
